k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lexos
  labels:
    name: lexos
    app.kubernetes.io/name: lexos
    app.kubernetes.io/version: "2.0.0"
